--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"cfenv": "1.0.x",
 		"ibmiotf":"~0.2.11",
 		"chart.js":"*",
-		"jquery": "^2.1.4"
-		 
+		"jquery": "^2.1.4",
+        "angular": "~1.3",
+        "angular-route": "*",
+        "materialize-css": "*"
 	},
 	"repository": {},
 	"engines": {
