--- a/.cfignore
+++ b/.cfignore
@@ -2,6 +2,7 @@ node_modules
 # ignore Bluemix VCAP_SERVICES environment variables
 
 vcap_service.json
+vcap_service.us.json
 vcap_service.uk.json
 vcap_service_bluemix.json
 
