--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,8 @@ applications:
 - path: .
   memory: 256M
   instances: 1
-  domain: mybluemix.net
-  name: iot-envmonitor
-  host: iot-envmonitor
+  domain: eu-gb.mybluemix.net
+  name: iot-disaster
+  host: iot-disaster
   disk_quota: 1024M
+
