--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"body-parser":"1.5.2",
 		"cfenv": "1.0.x",
 		"ibmiotf":"~0.2.11",
-		"chart.js":"*",
+		"chart.js":"1.0.2",
 		"jquery": "^2.1.4",
         "angular": "~1.3",
         "angular-route": "*",
